--- a/mediaservice/src/main/resources/application.properties
+++ b/mediaservice/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 ## Spring application name defining
-spring.application.name=pixogram-media-management
+spring.application.name=media-service
 
 ## Define server port to run application
 server.port=8086
 #eureka.client.service-url.default-zone=http://localhost:8761/eureka
 
 # Set here configurations for the database connection
-spring.datasource.url=jdbc:mysql://localhost:3306/pixogramdb?autoReconnect=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/testdb?autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false
 #spring.datasource.url=jdbc:mysql://localhost:3306/testdb?autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=root123
+spring.datasource.password=Passw0rd@123
 
 logging.level.=DEBUG
 
