--- a/usermanagement/src/main/resources/application.properties
+++ b/usermanagement/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ## Spring application name defining
-spring.application.name=pixogram-user-management
+spring.application.name=user-service
 
 ## Define server port to run application
 server.port=8085
@@ -25,9 +25,9 @@ spring.mvc.view.prefix=/WEB-INF/jsp
 spring.mvc.view.suffix=.jsp
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url=jdbc:mysql://localhost:3306/pixogramdb?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/testdb?autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=root123
+spring.datasource.password=Passw0rd@123
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
