--- a/mediaservice/src/main/resources/application.properties
+++ b/mediaservice/src/main/resources/application.properties
@@ -2,11 +2,12 @@
 spring.application.name=media-service
 
 ## Define server port to run application
-server.port=8086
+server.port=8080
 #eureka.client.service-url.default-zone=http://localhost:8761/eureka
 
 # Set here configurations for the database connection
 spring.datasource.url=jdbc:mysql://localhost:3306/testdb?autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false
+#spring.datasource.url=jdbc:mysql://mysqldb:3306/testdb?autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false
 #spring.datasource.url=jdbc:mysql://localhost:3306/testdb?autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
