--- a/usermanagement/src/main/resources/application.properties
+++ b/usermanagement/src/main/resources/application.properties
@@ -25,7 +25,7 @@ spring.mvc.view.prefix=/WEB-INF/jsp
 spring.mvc.view.suffix=.jsp
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url=jdbc:mysql://localhost:3306/testdb?autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/testdb?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=Passw0rd@123
 
